--- a/package.yaml
+++ b/package.yaml
@@ -28,9 +28,18 @@ library:
   source-dirs: src
 
 executables:
-  intensional-functions-examples-exe:
+  naive-subtype-closure:
     main:                Main.hs
-    source-dirs:         app
+    source-dirs:         apps/naive-subtype-closure
+    ghc-options:
+    - -threaded
+    - -rtsopts
+    - -with-rtsopts=-N
+    dependencies:
+    - intensional-functions-examples
+  indexed-subtype-closure:
+    main:                Main.hs
+    source-dirs:         apps/indexed-subtype-closure
     ghc-options:
     - -threaded
     - -rtsopts
