--- a/package.yaml
+++ b/package.yaml
@@ -37,9 +37,27 @@ executables:
     - -with-rtsopts=-N
     dependencies:
     - intensional-functions-examples
+  naive-subtype-closure-small:
+    main:                Main.hs
+    source-dirs:         apps/naive-subtype-closure-small
+    ghc-options:
+    - -threaded
+    - -rtsopts
+    - -with-rtsopts=-N
+    dependencies:
+    - intensional-functions-examples
   indexed-subtype-closure:
     main:                Main.hs
     source-dirs:         apps/indexed-subtype-closure
+    ghc-options:
+    - -threaded
+    - -rtsopts
+    - -with-rtsopts=-N
+    dependencies:
+    - intensional-functions-examples
+  indexed-subtype-closure-small:
+    main:                Main.hs
+    source-dirs:         apps/indexed-subtype-closure-small
     ghc-options:
     - -threaded
     - -rtsopts
