--- a/package.yaml
+++ b/package.yaml
@@ -64,6 +64,15 @@ executables:
     - -with-rtsopts=-N
     dependencies:
     - intensional-functions-examples
+  extensional-indexed-subtype-closure-small:
+    main:                Main.hs
+    source-dirs:         apps/extensional-indexed-subtype-closure-small
+    ghc-options:
+    - -threaded
+    - -rtsopts
+    - -with-rtsopts=-N
+    dependencies:
+    - intensional-functions-examples
 
 tests:
   intensional-functions-examples-test:
