--- a/package.yaml
+++ b/package.yaml
@@ -54,7 +54,7 @@ tests:
     - -threaded
     - -rtsopts
     - -with-rtsopts=-N
-    - -Werror
+    # - -Werror
     - -Wall
     - -Wcompat
     - -Wincomplete-record-updates
